Start moving fork to Robocorp branding, disable old google analytics

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Robotcorder",
+  "name": "Robocorp Recorder",
   "version": "0.4.0",
-  "homepage_url": "https://github.com/sohwendy/Robotcorder",
+  "homepage_url": "https://github.com/robocorp/Robotcorder",
   "description": "A Robot that records user action and scans the page to generate RobotFramework test scripts (beta)",
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
   "background": {
