--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "robotcorder",
-  "version": "0.4.0",
-  "description": "A Robot that records user action and scans the page to generate RobotFramework test scripts (beta)",
+  "name": "robocorp-recorder",
+  "version": "0.1.0",
+  "description": "A browser extension that records user action and scans the page to generate RobotFramework test script templates",
   "main": "src.background.js",
   "directories": {
     "test": "test"
@@ -17,12 +17,12 @@
     "type": "git",
     "url": "git+https://github.com/sohwendy/Robotcorder.git"
   },
-  "author": "Wendy",
-  "license": "MIT",
+  "author": "@xylix",
+  "license": "GPLv3",
   "bugs": {
-    "url": "https://github.com/sohwendy/Robotcorder/issues"
+    "url": "https://github.com/robocorp/Robotcorder/issues"
   },
-  "homepage": "https://github.com/sohwendy/Robotcorder#readme",
+  "homepage": "https://github.com/robocorp/Robotcorder#readme",
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^5.0.0",
