--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/sohwendy/Robotcorder.git"
   },
   "author": "@xylix",
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/robocorp/Robotcorder/issues"
   },
