--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "lint": "./node_modules/.bin/eslint .",
     "lint-fix": "./node_modules/.bin/eslint . --fix",
-    "test-local": "./node_modules/mocha/bin/mocha  -r test/setup.js test/* --reporter nyan",
+    "test-local": "yarn run nyc mocha  -r test/setup.js test/* --reporter nyan",
     "test": "yarn run lint-fix && yarn run test-local",
     "export": "./script/export.command"
   },
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.11.0",
     "jsdom": "^11.12.0",
     "mocha": "^5.2.0",
+    "nyc": "^15.1.0",
     "sinon-chrome": "^2.3.2"
   }
 }
