--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "RF Recorder",
-  "version": "0.2.0",
+  "name": "Robocorp Recorder",
+  "version": "0.3.0",
   "homepage_url": "https://github.com/robocorp/Robotcorder",
   "description": "A browser extension that records user action and scans the page to generate RobotFramework scripts",
   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
