--- a/package.json
+++ b/package.json
@@ -37,5 +37,14 @@
     "nyc": "^15.1.0",
     "pinst": "^2.1.1",
     "sinon-chrome": "^2.3.2"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.js"
+    ],
+    "exclude": [
+      "test/**/*.js"
+    ],
+    "all": true
   }
 }
