--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mocha": "^5.2.0",
     "nyc": "^15.1.0",
     "pinst": "^2.1.1",
+    "playwright": "^1.7.1",
     "sinon-chrome": "^2.3.2"
   },
   "nyc": {
