--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "./node_modules/.bin/eslint .",
     "lint-fix": "./node_modules/.bin/eslint . --fix",
     "test-local": "yarn run nyc mocha -r test/setup.js test/* --reporter nyan",
-    "test": "yarn run lint-fix && yarn run test-local",
+    "test": "yarn run lint-fix && yarn export && yarn run test-local",
     "export": "./script/export.command",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
