Fix headful tests on CI

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -12,9 +12,14 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Start xvfb on Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          export DISPLAY=:99.0
+          Xvfb -ac :99 -screen 0 1280x1024x16 > /dev/null 2>&1 &
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
           node-version: 12
       - run: yarn
-      - run: yarn test
+      - run: xvfb-run --auto-servernum yarn test
